Added some info to HELP.md as DEVNOTES